# Computer-Vision-Studies

./: .gitignore  README.md  activation_funcs.py  dense_layer.py  environment.yml  mcculloch_pitts.py  mcculloch_pitts_numpy.py  requirements.txt  test.py
autoencoders/: README.md
autoencoders/convolutional_autoencoder/: eval_model.py
autoencoders/deepfake_generation/: train.py
books/: README.md
books/ModernCV-Packt/: README.md
books/NN_DL/: README.md
books/Vision/: README.md
books/ZTM-Pytorch/: README.md
books/fast-ai/: README.md
chapters/ch01/: ModernCV_Chap1.ipynb
chapters/ch02/: ModernCV_Chap2.ipynb  mymodel.pth
chapters/ch03/: ModernCV_Chap3.ipynb
chapters/ch04/: ModernCV_Chap4_CNNReal.ipynb
chapters/ch05/: ModernCV_Chap5_TransferLearningVGG.ipynb
codes/autoencoders/: README.md
codes/autoencoders/convolutional_autoencoder/: cae.py  dataset.py  train.py
codes/autoencoders/deepfake_generation/: deepfake_autoencoder.py  test.py
codes/cplusplus/: README.md
codes/cplusplus/cuda/: test_cuda.cu
codes/cplusplus/neuralnet/: CMakeLists.txt  README.md
codes/cplusplus/neuralnet/src/: main.cpp  void.cpp
codes/cplusplus/neuralnet/tests/: tests.cpp
codes/gans/basic_gan/: train.py
codes/gans/cyclegan/: README.md  discriminator.py  eval.py  testModel.py  train.py  trainModel.py
codes/golang/: README.md  hello.go
codes/lightning/: README.md  lightning.py  train.py
codes/self_supervised/: README.md
codes/style_transfer/: neural_style_transfer.ipynb
courses/: README.md
src/: activation_functions.py  dense_layer.py
(+48 files in other folders)
